# string-template-rs

./: Cargo.toml  README.md
parse/: Cargo.toml
parse/src/: lib.rs
parse/tests/: simple.rs
rfcs/: 000-template.md  README.md
rfcs/text/: 001-free-spaced-syntax.md
src/: error.rs  lib.rs  parse.rs  parser.rs
string-template/: Cargo.toml
string-template-macro/: .gitignore  Cargo.toml
string-template-macro/src/: lib.rs  test.rs
string-template-macro/tests/: core_basics.rs  simple.rs
string-template-test/: Cargo.toml
string-template-test/src/: lib.rs  tests.rs
string-template/src/: context.rs  error.rs  group.pest  interpreter.rs  lib.rs  parse.rs  st.pest  template.pest  tests.rs
string-template/src/parse/: error.rs  pest.rs  syn.rs
tests/: simple.rs
