[package]
name = "string-template"
version = "0.1.0"
authors = ["Geoff Shannon <geoffpshannon@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
indexmap = "1.0"
lazy_static = "1.3"
pest = "2.0"
pest_derive = "2.0"
proc-macro2 = "0.4"
quote = "0.6"
serde = "1.0"
serde_json = "1.0"
syn = "0.15"

[dev-dependencies]
serde_derive = "1.0"
